# Tutor-code

./: README.md  demo.py  pyproject.toml  requirements.txt
src/tutor_tui/: __init__.py  __main__.py  config.py
src/tutor_tui/content/: __init__.py  generator.py
src/tutor_tui/core/: __init__.py  course.py  persistence.py  state.py
src/tutor_tui/export_import/: __init__.py  manager.py
src/tutor_tui/labs/: __init__.py  evaluator.py  workspace.py
src/tutor_tui/llm/: __init__.py  client.py  prompts.py
src/tutor_tui/tui/: __init__.py  app.py
tests/: test_course.py
